add strict mode

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react_calendar",
   "version": "0.1.0",
+  "homepage": "https://hyebin26.github.io/react-dietCalendar",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -42,6 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://hyebin26.github.io/react-dietCalendar"
+  }
 }
