--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hyebin26.github.io/"
+  "homepage": "https://hyebin26.github.io/react-dietCalendar"
 }
