--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.2.6",
+    "express": "^4.17.1",
     "firebase": "^8.2.5",
     "gh-pages": "^3.1.0",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -43,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hyebin26.github.io/react-dietCalendar"
+  "proxy": "http://localhost:3001"
 }
